Fix bottom footer flex spacing

--- a/styles.css
+++ b/styles.css
@@ -56,8 +56,8 @@ footer {
 
 footer #lower {
     display: flex;
-    justify-content: space-around;
-    padding: 15px 0px;
+    justify-content: space-between;
+    padding: 15px 20px;
 }
 
 footer #location {
